--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Team Waffles
+title: Team Waffles Development
 remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
